[gd_scene load_steps=9 format=3 uid="uid://b6s3076j1f4vn"]

[ext_resource type="Script" uid="uid://df0kuu6g5he05" path="res://MysticForest/scripts/ui.gd" id="1_8bteh"]
[ext_resource type="Texture2D" uid="uid://copeijxbpd6ix" path="res://MysticForest/assets/UI/attunement panel.png" id="2_s5agi"]
[ext_resource type="Texture2D" uid="uid://bdnmmha7ssygv" path="res://MysticForest/assets/UI/panel_background_9patch.png" id="3_fb3mg"]
[ext_resource type="FontFile" uid="uid://c307wrx23n856" path="res://MysticForest/Fonts/Pixeloid/PixeloidSansBold-PKnYd.ttf" id="4_mrk2n"]
[ext_resource type="Script" uid="uid://cnclwpuwktsrl" path="res://MysticForest/scripts/item_slot.gd" id="5_fb3mg"]
[ext_resource type="FontFile" uid="uid://drip8h3nyouco" path="res://MysticForest/Fonts/Pixeloid/PixeloidSans-mLxMm.ttf" id="6_fb3mg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s5agi"]
atlas = ExtResource("2_s5agi")
region = Rect2(0, 0, 257, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb3mg"]
atlas = ExtResource("2_s5agi")
region = Rect2(256, 0, 256, 88)

[node name="UI" type="CanvasLayer"]
process_mode = 3
layer = 8
script = ExtResource("1_8bteh")
pixel_font = ExtResource("4_mrk2n")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 48.0

[node name="Background" type="ColorRect" parent="HUD"]
visible = false
layout_mode = 0
offset_top = -17.0
offset_right = 264.0
offset_bottom = 90.0
color = Color(1, 0.65098, 0.454902, 0.619608)

[node name="ResonanceBar" type="TextureProgressBar" parent="HUD"]
layout_mode = 1
offset_right = 257.0
offset_bottom = 88.0
texture_under = SubResource("AtlasTexture_s5agi")
texture_progress = SubResource("AtlasTexture_fb3mg")

[node name="KeyItemDisplay" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MenuWindow" type="NinePatchRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_right = 1113.0
offset_bottom = 606.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fb3mg")

[node name="TabsContainer" type="HBoxContainer" parent="Menu/MenuWindow"]
layout_mode = 0
offset_top = -40.0
offset_right = 1150.0

[node name="InventoryTab" type="Button" parent="Menu/MenuWindow/TabsContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 20
toggle_mode = true
button_pressed = true
text = "Inventory"

[node name="JournalTab" type="Button" parent="Menu/MenuWindow/TabsContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "Journal"

[node name="MapTab" type="Button" parent="Menu/MenuWindow/TabsContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "Map"

[node name="Pages" type="Control" parent="Menu/MenuWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -19.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InventoryPage" type="GridContainer" parent="Menu/MenuWindow/Pages"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -475.0
offset_top = -234.5
offset_right = 475.0
offset_bottom = 235.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 6

[node name="ItemSlot" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot2" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot3" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot4" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot4"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot5" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot5"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot6" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot6"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot6"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot7" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot7"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot7"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot8" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot8"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot8"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot9" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot9"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot9"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot10" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot10"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot10"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot11" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot11"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot11"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot12" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot12"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot12"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot13" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot13"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot13"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot14" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot14"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot14"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot15" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot15"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot15"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot16" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot16"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot16"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot17" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot17"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot17"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemSlot18" type="ColorRect" parent="Menu/MenuWindow/Pages/InventoryPage"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.239216, 0.219608, 0.184314)
script = ExtResource("5_fb3mg")

[node name="Icon" type="TextureRect" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot18"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
expand_mode = 2

[node name="QuantityLabel" type="Label" parent="Menu/MenuWindow/Pages/InventoryPage/ItemSlot18"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mrk2n")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="JournalPage" type="HSplitContainer" parent="Menu/MenuWindow/Pages"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 19.0
offset_right = -21.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 1

[node name="CategoriesList" type="ScrollContainer" parent="Menu/MenuWindow/Pages/JournalPage"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="CategoriesContainer" type="VBoxContainer" parent="Menu/MenuWindow/Pages/JournalPage/CategoriesList"]
layout_mode = 2

[node name="DisplayPanel" type="VBoxContainer" parent="Menu/MenuWindow/Pages/JournalPage"]
layout_mode = 2

[node name="ArtDisplay" type="TextureRect" parent="Menu/MenuWindow/Pages/JournalPage/DisplayPanel"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 3
stretch_mode = 4

[node name="TextDisplay" type="RichTextLabel" parent="Menu/MenuWindow/Pages/JournalPage/DisplayPanel"]
layout_mode = 2
size_flags_vertical = 2
theme_override_fonts/normal_font = ExtResource("6_fb3mg")
theme_override_fonts/mono_font = ExtResource("6_fb3mg")
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
fit_content = true
tab_size = 10
horizontal_alignment = 3
vertical_alignment = 3

[node name="MapPage" type="TextureRect" parent="Menu/MenuWindow/Pages"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
